# mcpatrol

./: .gitignore  LICENSE  LINKEDIN.md  README.md  __main__.py  ci.yml  client.py  cost.py  demo_data.py  pyproject.toml  quality.py  reliability.py  report.py  scoring.py  security.py  test_smoke.py
