[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpatrol"
version = "0.1.0"
description = "Security & quality scanner for MCP servers — get an A-F report card in 30 seconds."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Masood Naqvi" }]
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "security", "audit", "ai-agents", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
quality = ["anthropic>=0.40.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mcpatrol = "mcpatrol.__main__:main"

[project.urls]
Homepage = "https://github.com/mxsood1/mcpatrol"
Repository = "https://github.com/mxsood1/mcpatrol"
Issues = "https://github.com/mxsood1/mcpatrol/issues"

[tool.setuptools.packages.find]
include = ["mcpatrol*"]
